--- a/index.html
+++ b/index.html
@@ -4349,9 +4349,7 @@ it is copy and paste. Now, we're doing a lot of this stuff twice, so
 we're going to actually take some of this stuff out of here and put it
 into its own function. We'll do that in the next lesson.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-16">
-2.16. resetPagePosition Function
-</h2>
+<h2 name="ch2-16">2.16. resetPagePosition Function</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 240. resetpageposition function (125) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -4462,7 +4460,8 @@ highlighted, so that's correct.</p>
 <p align="center">
 <img src="./images/webp/image248.webp"
   style="width:45%;"
-  alt="Reload index.html." /> <img src="./images/webp/image249.webp"
+  alt="Reload index.html." />
+<img src="./images/webp/image249.webp"
   style="width:45%;"
   alt="Reload index.html, again." />
 </p>
@@ -4499,9 +4498,7 @@ I showed you. But it's really pretty exciting. We're going to do one
 last lesson on this where we just look at the different pieces and
 review what we've done.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-17">
-2.17. Reviewing the Whole Script
-</h2>
+<h2 name="ch2-17">2.17. Reviewing the Whole Script</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 251. reviewing the whole script (2.17) (130) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -4597,7 +4594,8 @@ are and sets the styling for the links appropriately.</p>
 <p align="center">
 <img src="./images/webp/image257.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image258.webp"
+  alt="." />
+<img src="./images/webp/image258.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -4611,7 +4609,8 @@ this works.</p>
 <p align="center">
 <img src="./images/webp/image259.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image260.webp"
+  alt="." />
+<img src="./images/webp/image260.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -4628,7 +4627,8 @@ both scripts are working.</p>
 <p align="center">
 <img src="./images/webp/image261.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image262.webp"
+  alt="." />
+<img src="./images/webp/image262.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -4645,16 +4645,12 @@ be working. Great, so everything's working the way it's supposed to, and
 you have a script that you could use to create all interesting
 interactions as you scroll down the page, all done in JQuery. We'll do
 the same script, and play JavaScript.</p>
+
 <ul>
-<li>
-<a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation">2.17.jQueryPage-Location-Tracking.pdf
-(28 pgs).</a>
-</li>
+  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation">2.17.jQueryPage-Location-Tracking.pdf (28 pgs).</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-18">
-2.18. Introduction to Scroll Effects with JS
-</h2>
+<h2 name="ch2-18">2.18. Introduction to Scroll Effects with JS</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~ 263. intro to scroll effects with js (2.18) (136) ~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -4757,18 +4753,14 @@ function here, and when you click it, if we put the parentheses there,
 then it will run right away, and not even wait for the click. So, we
 want to just put the pointer debt to this function down here, and let it
 run that way.</p>
-<h3>
-Start Files: Smooth Scroll with JavaScript –
-</h3>
+
+<h3>Start Files: Smooth Scroll with JavaScript –</h3>
+
 <ul>
-<li>
-<a href="https://www.coursera.org/learn/interactivity-JavaScript-jquery/supplement/tJhzN/start-files-smooth-scroll-with-JavaScript">2.18.Scroll-Effects-START.zip</a>
-</li>
+  <li><a href="https://www.coursera.org/learn/interactivity-JavaScript-jquery/supplement/tJhzN/start-files-smooth-scroll-with-JavaScript">2.18.Scroll-Effects-START.zip</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-19">
-2.19. Getting the Target – Part 1 (4:50)
-</h2>
+<h2 name="ch2-19">2.19. Getting the Target – Part 1 (4:50)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 269. getting the target - part 1 (2.19) (139) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -4863,9 +4855,7 @@ round this down. So we'll do that in the next lesson and assign this
 value to a variable that we can actually use rather than just have it
 spit out in the console. Well, we'll do that in the next lesson.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-20">
-2.20 Getting the Target - Part 2 (5:15)
-</h2>
+<h2 name="ch2-20">2.20 Getting the Target - Part 2 (5:15)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 276. getting the target - part 2 (2.20) (142) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -4934,7 +4924,8 @@ we saw before.
 <p align="center">
 <img src="./images/webp/image280.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image281.webp"
+  alt="." />
+<img src="./images/webp/image281.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -4959,9 +4950,7 @@ right location. It's not going all the way up to the top of the window,
 but the behavior 'smooth' is not working. That's a bit of a problem, and
 we'll talk about it more in the next lesson.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-21">
-2.21 Smooth Scroll Polyfill (4:45)
-</h2>
+<h2 name="ch2-21">2.21 Smooth Scroll Polyfill (4:45)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 282. smooth scroll polyfill (2.21) (146) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -4980,7 +4969,8 @@ developer named Remy Sharp.</p>
 <p align="center">
 <img src="./images/webp/image283.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image281.webp"
+  alt="." />
+<img src="./images/webp/image281.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -4999,7 +4989,8 @@ how to use them.
 <p align="center">
 <img src="./images/webp/image285.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image286.webp"
+  alt="." />
+<img src="./images/webp/image286.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5055,9 +5046,7 @@ script, which is the part where when we scroll down the page manually,
 it changes the highlighting in the navigations. We'll again be working
 with scrolling and capturing the scrolling.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-22">
-2.22 Checking the Load (6:48)
-</h2>
+<h2 name="ch2-22">2.22 Checking the Load (6:48)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 289.  (149) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -5142,7 +5131,8 @@ forward with the next part.</p>
 <p align="center">
 <img src="./images/webp/image293.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image294.webp"
+  alt="." />
+<img src="./images/webp/image294.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5172,7 +5162,8 @@ pick it up from here.</p>
 <p align="center">
 <img src="./images/webp/image296.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image297.webp"
+  alt="." />
+<img src="./images/webp/image297.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5187,9 +5178,7 @@ of each of these sections. I don't want it to change. I'm going to need
 to do something to adjust that number and fix that, and we'll take care
 of that in the next lesson.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-23">
-2.23 Top Posts (5:35)
-</h2>
+<h2 name="ch2-23">2.23 Top Posts (5:35)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 298.  (153) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -5221,7 +5210,8 @@ always get 200 pixels. Let's go ahead and give that a try.
 <p align="center">
 <img src="./images/webp/image300.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image301.webp"
+  alt="." />
+<img src="./images/webp/image301.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5292,9 +5282,7 @@ we're doing it with plain JavaScript instead. But really, all the steps
 are the same, and it's the same process. It's just the syntax, that's a
 little bit different.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-24">
-2.24 Add an Event Listener (5:42)
-</h2>
+<h2 name="ch2-24">2.24 Add an Event Listener (5:42)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 305.  (157) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -5381,7 +5369,8 @@ those pixels change as we scroll down the page. Let's test that and see.
 <p align="center">
 <img src="./images/webp/image311.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image312.webp"
+  alt="." />
+<img src="./images/webp/image312.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5429,9 +5418,7 @@ and scrolling up. Those are really your only two options, because this
 page doesn't scroll left and right. Those are the two conditions that we
 need to watch out for, while we're handling our scroll effect.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-25">
-2.25 The Magic Conditionals (5:58)
-</h2>
+<h2 name="ch2-25">2.25 The Magic Conditionals (5:58)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 315.  (162) ~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -5494,7 +5481,8 @@ pixels from the top of the page, it hits it and says okay.
 <p align="center">
 <img src="./images/webp/image318.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image319.webp"
+  alt="." />
+<img src="./images/webp/image319.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5547,9 +5535,7 @@ the correct class on the correct link. We'll put the selected class on
 the most correct so that it can get highlighted properly. Put a
 semicolon there before we go.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-26">
-2.26 Changing the Next Link (5:56)
-</h2>
+<h2 name="ch2-26">2.26 Changing the Next Link (5:56)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 322.  (167) ~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -5632,7 +5618,8 @@ counter, because now we're ready to go into the next section.
 <p align="center">
 <img src="./images/webp/image327.webp"
   style="width:45%;"
-  alt="." /> <img src="./images/webp/image328.webp"
+  alt="." />
+<img src="./images/webp/image328.webp"
   style="width:45%;"
   alt="." />
 </p>
@@ -5671,9 +5658,7 @@ take care of that in the next lesson, and then we're done with this
 script and you'll have two versions of it, one that works with jQuery,
 and one that works with plain Vanilla JavaScript.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch2-27">
-2.27 Resizing Function (5:07)
-</h2>
+<h2 name="ch2-27">2.27 Resizing Function (5:07)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 330.  (172) ~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -9732,23 +9717,21 @@ remove console gamedata.rollsum = 2 which was hard-coded for testing the
 switch players function.
 </p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch4-09">
-4.09 A “1” Was Rolled (5:19)
-</h2>
+<h2 name="ch4-09">4.09 A “1” Was Rolled (5:19)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 638. a "1" was rolled (4.09) (323) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
-&lt;img src=“./images/webp/image638.webp” style=“width:40%;” alt=“4.09.
-A”1” was rolled.” /&gt;
+<img src="./images/webp/image638.webp" 
+  style="width:40%;" 
+  alt="4.09. A '1' was rolled." />
 </p>
-<p>
-The next thing we're going to look at is if a one has been rolled.
-</p>
+<p>The next thing we're going to look at is if a one has been rolled.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 639. again, a "1" was rolled (323) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
-&lt;img src=“./images/webp/image639.webp” style=“width:50%;” alt=“Again,
-a”1” is rolled.” /&gt;
+<img src="./images/webp/image639.webp" 
+  style="width:50%;" 
+  alt="Again, a '1' is rolled." />
 </p>
 <p>
 To start with, we're going to swap the players right off the die. If
@@ -9818,7 +9801,8 @@ and runs out of time again. That will work, that should work just fine.
 <p align="center">
 <img src="./images/webp/image643.webp"
   style="width:45%;"
-  alt="gameData.roll." /> <img src="./images/webp/image644.webp"
+  alt="gameData.roll." />
+<img src="./images/webp/image644.webp"
   style="width:45%;"
   alt="gameData.roll." />
 </p>
@@ -10004,9 +9988,7 @@ perfectly fine just the way it is, excellent. Let's stop there and we'll
 pick it up in the next lesson.
 </p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch4-11">
-4.11 Checking for a Win (6:02)
-</h2>
+<h2 name="ch4-11">4.11 Checking for a Win (6:02)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~ 657. 3rd major function checks for winning condition (332) ~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -10014,10 +9996,7 @@ pick it up in the next lesson.
   style="width:50%;"
   alt="." />
 </p>
-<p>
-The third major function we need is the function that checks for a
-winning condition.
-</p>
+<p>The third major function we need is the function that checks for a winning condition.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 658. checking for a win (333) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
@@ -10035,7 +10014,8 @@ our functions down here.
 <p align="center">
 <img src="./images/webp/image659.webp"
   style="width:45%;"
-  alt="function throwDice." /> <img src="./images/webp/image660.webp"
+  alt="function throwDice." />
+<img src="./images/webp/image660.webp"
   style="width:45%;"
   alt="Check Winning Condition." />
 </p>
@@ -10092,9 +10072,7 @@ And the next lesson, we'll fill out the show current score section of
 this <b>function</b>.
 </p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 name="ch4-12">
-4.12 Show the Current Score (8:33)
-</h2>
+<h2 name="ch4-12">4.12 Show the Current Score (8:33)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~ 663. show the current score (4.12) (335) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
