--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@ jQuery</h1>
 <!--~~~~~~~~~~~~~~~~~~~~~~ readme.md of uc-davis-inter-jquery.bauska.org ~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="thumbnail displayed border"
   src="./images/webp/image001.webp"
   alt="jQuery logo."
   style="width: 40%; border: 2px solid #000000;" />
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 02. uc davis logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed border"
+<img class="thumbnail displayed border"
   src="./images/webp/image002.webp" 
   alt="University of California @Davis logo."
   style="border: 2px solid #000000; width: 20%;" />
@@ -879,17 +879,14 @@ guidelines and the Coursera Honor Code here:</p>
     rel="noopener noreferrer" target="_blank"> Coursera’s Honor Code</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-01">
-1.01. Welcome! Course Introduction (0:40)
-</h2>
+<h2 id="ch1-01">1.01. Welcome! Course Introduction (0:40)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 03. course intro (08) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image003.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image003.webp" 
   alt="1.01. Course Introduction."
-  style="border: 2px solid #000000;" 
-  width="40%;" />
-</p>
+  style="border: 2px solid #000000;width:40%;" />
+
 <p>Hello and welcome to our 3rd course in our four-core specialization
 on JavaScript. My name is Bill Mead and I'm back again to do more
 JavaScript with you. Hopefully you've completed our first two courses on
@@ -903,50 +900,40 @@ We're going to do a lot in this course. Let's break out our code editors
 and our web browsers and get started and learn even more about
 JavaScript.
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-02">
-1.02. Module Introduction
-</h2>
+<h2 id="ch1-02">1.02. Module Introduction</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 04. module 1 intro (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image004.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image004.webp" 
   alt="1.02. Module 1 Introduction."
-  style="border: 2px solid #000000;" 
-  width="40%;" />
-</p>
-<div data-align="right">
-<p><b><a href="#table-of-contents">↥ Back To Top</a></b></p>
-</div>
-Hello and welcome to our first module in our third course on JavaScript.
+  style="border: 2px solid #000000; width:40%;" />
+
+<p>Hello and welcome to our first module in our third course on JavaScript.
 In this module, we're going to dive even deeper into jQuery, looking at
 some jQuery plugins. You've already made some sliders in a previous
 lesson. But in this lesson, we'll look at the <b>flex slider</b> plugin,
 which adds a lot of features, two sliders and comparing that to what
 you've done manually by creating your own sliders is really instructive
 and useful. Plus, you end up with a great tool for creating slider
-elements on web pages and that's really pretty fun.
+elements on web pages and that's really pretty fun.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-03">
-1.03. Introduction to jQuery Plugins (3:49)
-</h2>
+<h2 id="ch1-03">1.03. Introduction to jQuery Plugins (3:49)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 05. intro to jquery plugins (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image005.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image005.webp" 
   alt="1.03. Intro to jQuery Plugins."
-  style="border: 2px solid #000000;" 
-  width="40%;" />
-</p>
-Just as a quick recap, we've learned a lot of JavaScript so far.
+  style="border: 2px solid #000000; width:40%;" />
+
+<p>Just as a quick recap, we've learned a lot of JavaScript so far.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 06. recap: javascript (10) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image006.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image006.webp" 
   alt="Recap: JavaScript."
-  style="border: 2px solid #000000;" 
-  width="40%;" />
-</p>
-We started with the JavaScript basics, which included working with
+  style="border: 2px solid #000000; width:40%;" />
+
+<p>We started with the JavaScript basics, which included working with
 variables, flow control structures like if statements and else
 statements and loops, and that stuff. We created reusable functions that
 you can use in multiple projects or you can use multiple times within
@@ -954,28 +941,26 @@ the same project. We've manipulated the DOM and handled events such as
 when somebody clicks on something or hovers a mouse over something, we
 can capture those events and then do things with them. With these
 basics, you can do quite a lot, but it might take you a long time to
-write the scripts that you want to do for your web page.
+write the scripts that you want to do for your web page.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 07. recap: jquery (10) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image007.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image007.webp" 
   alt="Recap: jQuery."
-  style="border: 2px solid #000000;" 
-  width="40%;" />
-</p>
-Then we had jQuery and your world became a little bit larger. With
+  style="border: 2px solid #000000; width:40%;" />
+
+<p>Then we had jQuery and your world became a little bit larger. With
 jQuery, we've learned that there are a lot of helper functions built
 into this library that make writing scripts shorter and a little bit
 more compact, and a little bit easier. That helps and that makes things
-a little bit easier and a little bit better for all of us.
+a little bit easier and a little bit better for all of us.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 08. introducing: plugins (11) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image008.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image008.webp" 
   alt="Introducing: Plugins."
-  style="border: 2px solid #000000;" 
-  width="40%;" />
-</p>
+  style="border: 2px solid #000000; width:40%;" />
+
 <p>Now we need to introduce plugins. We've already used the
 <b>easing</b> plugin, which is a very simple plugin that adds additional
 function to jQuery, so that you can use different types of
@@ -983,7 +968,7 @@ function to jQuery, so that you can use different types of
 animate on your screen, and by plugging in that particular plugin, you
 get access to all of those different features that aren't built into
 jQuery.</p>
-jQuery has this plugin architecture that's very powerful, that allows
+<p>jQuery has this plugin architecture that's very powerful, that allows
 developers to build extensions to jQuery. They give it a lot of
 additional functionality. There are tons of jQuery plugins available,
 thousands of them, and I recommend looking around the web and seeing
@@ -994,15 +979,14 @@ becomes a lot bigger because now you don't only have to just write all
 your scripts yourself. You can look for scripts that other people have
 written and see if you can modify them and use them in your own projects
 through the use of a plugin, and that's really very powerful and really
-great.
+great.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 09. adding functionality (12) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<p align="center">
-<img src="./images/webp/image009.webp" 
+<img class="thumbnail displayed border"
+  src="./images/webp/image009.webp" 
   alt="Adding Functionality."
-  style="border: 2px solid #000000;" 
-  width="50%;" />
-</p>
+  style="border: 2px solid #000000; width:50%;" />
+
 <p>Again, <b>plugins</b> add additional functionality to jQuery, and
 we've already seen this with the <b>easing plugin.</b> But some plugins
 can have very complex functionality without us having to write a whole
@@ -1016,9 +1000,8 @@ super easy? There are plugins for those things and they might come with
 a lot of features and functionality. What if you want the tabs to run
 down the side of the tabbed interface rather than across the tab? You
 could do that thing.</p>
-<h2 id="ch1-04">
-1.04. Using Plugins and Essential Steps (4:22)
-</h2>
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<h2 id="ch1-04">1.04. Using Plugins and Essential Steps (4:22)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~ 10. using plugins and essential steps (1.04) (13) ~~~~~~~~~~~~~~~~~~~~~-->
 <p align="center">
