--- a/index.html
+++ b/index.html
@@ -186,16 +186,18 @@ jQuery</h1>
 <!--~~~~~~~~~~~~~~~~~~~~~~ readme.md of uc-davis-inter-jquery.bauska.org ~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="thumbnail displayed border"
+<!-- "displayed border" -->
+<img class="thumbnail"
   src="./images/webp/image001.webp"
-  alt="jQuery logo."
-  style="width: 40%; border: 2px solid #000000;" />
+  alt="jQuery logo." />
+<!--  style="width: 40%; border: 2px solid #000000;" -->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 02. uc davis logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="thumbnail displayed border"
+<img class="thumbnail"
   src="./images/webp/image002.webp" 
-  alt="University of California @Davis logo."
-  style="border: 2px solid #000000; width: 20%;" />
+  alt="University of California @Davis logo." />
+<!--  style="border: 2px solid #000000; width: 20%;" -->
 
 <h3>About this Course</h3>
 
