--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	and identify processes for breaking larger programs into smaller, more manageable pieces." />
   
   <title>University of California @Davis Interactivity with JavaScript and jQuery</title>
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <h1 style="text-align:center;">Interactivity with JavaScript and jQuery</h1>
   <h6 style="text-align:center;">(by William Mead, Lecturer - University of California 
   <span class="citation" data-cites="Davis">@Davis</span>)</h6>
